2005-11-02 Kimmo
 BUG: [ 1341243 ] Current Find string is too fragile
  Was resetting find string after rescanning
  Src/editlib: ccrystaltextview.cpp

2005-11-02 Tim
 PATCH: [ 1345382 ] Translated Shell Extension to German
  ShellExtension/Languages: ShellExtensionGerman.rc

2005-10-31 Kimmo
 RFE: [ 1324314 ] CTRL+W to close current diff
  Src: Merge.rc
  Src/Languages: *.rc
 PATCH: [ 1342871 ] Disable Copy Filenames for folders
  Src: DirView.cpp DirView.h
 PATCH: [ 1343059 ] Swedish translation update for 2.5.0.1 experimental
  Submitted by Hans Eriksson
  Src/Languages/Swedish: MergeSwedish.rc

2005-10-30 Kimmo
 PATCH: [ 1341813 ] VSS project linking misdetects project files
  Src: VSSHelper.cpp
 PATCH: [ 1310710 ] Fix bug #1309450
  Submitted by Jochen
  Src: DiffContext.cpp DiffContext.h DiffFileInfo.cpp DiffFileInfo.h DirScan.cpp

2005-10-29 Kimmo
 PATCH: [ 1341183 ] Fix VSS checkout canceling
  Src: DirActions.cpp MainFrm.cpp
 Open 2.4 manual (update link)
  Src: MainFrm.cpp

2005-10-25 Perry
 PATCH: [ 1334444 ] Remove needless (& therefore confusing) cast
  Src: LocationView.cpp

2005-10-23 Perry
 PATCH: [ 1334484 ] Skip location view paint if buffer not initialized
  Src: LocationView.cpp MergeDoc.cpp MergeDoc.h
   MergeEditView.cpp MergeEditView.h
 Cosmetic changes to GetFunctionsFromScript, to document 
  arguments passed to GetTypeInfo.
 Src: Plugins.cpp

2005-10-21 Kimmo
 PATCH: [ 1333545 ] Small improvement to Open-dialog folder selection
  Src: OpenDlg.cpp
 PATCH: [ 1333581 ] Increase quick compare limit and make it option
  Src: DiffContext.h DiffWrapper.cpp DirDoc.cpp OptionsDef.h OptionsInit.cpp

2005-10-20 Tim
 PATCH: [ 1330179 ] Icon for 'Print'
  Src: MainFrm.cpp Merge.rc resource.h
  Src/res new file: print.bmp
  Src/Languages: *.rc resource.h
  Src/Languages/res new file: print.bmp

2005-10-20 Kimmo
 PATCH: [ 1332365 ] Make some DirActions.cpp functions consts
  Src: DirActions.cpp DirView.h

2005-10-19 Kimmo