@@ -118,6 +118,8 @@ BOOL SelectFolder(CString& path, LPCTSTR root_path = NULL,
 			 LPCTSTR title = NULL, 
 			 HWND hwndOwner = NULL);
 
+void ConvertFilter(LPTSTR filterStr);
+
 //{{AFX_INSERT_LOCATION}}
 // Microsoft Developer Studio will insert additional declarations immediately before the previous line.
 
